--- a/swinburne-aem-prototype/source/v2/scss/themes/lists/_social.scss
+++ b/swinburne-aem-prototype/source/v2/scss/themes/lists/_social.scss
@@ -1,7 +1,6 @@
 &-social-links {
   background-color: $tertiary;
   min-width: 100%;
-  padding: 20px;
 
   > .content {
     margin: 0;
